# wlsbuild

./: .gitignore  ChangeLog.txt  README  autotools.txt  gnome-accesibility  gnome-app.buildlist  gnome-minimal.txt  gnome.buildlist  libs.buildlist  old-tarball  uid_gid.txt  wallbuild-common  wlsbuild  wlsenv
0ad/: 0ad-data.spec  0ad.SlackBuild  0ad.info  0ad.spec  slack-desc  slack-required  slackware-boost-libs-name.patch
0ad-data/: 0ad-data.SlackBuild  0ad-data.info  slack-desc
BeautifulSoup/: BeautifulSoup.SlackBuild  BeautifulSoup.info  slack-desc  slack-required
CImg/: CImg.SlackBuild  CImg.info  slack-desc
Cython/: Cython.SlackBuild  Cython.info  slack-desc
DevIL/: DevIL.SlackBuild  DevIL.info  doinst.sh  slack-desc
DeviceKit/: DeviceKit.SlackBuild  slack-desc
DeviceKit-disks/: DeviceKit-disks.SlackBuild  slack-desc  slack-required
DeviceKit-power/: DeviceKit-power.SlackBuild  slack-desc  slack-required
GConf/: GConf.SlackBuild  doinst.sh  slack-desc  slack-required
GNOME/: README.TXT
GeoIP/: GeoIP.SlackBuild  GeoIP.info  slack-desc
LibRaw/: LibRaw.SlackBuild
MATE/: mate-desktop.txt
MPlayer/: MPlayer.SlackBuild  MPlayer.info  mpcdec.diff  musepack.mpcdec.diff  slack-required
ModemManager/: ModemManager.SlackBuild  doinst.sh  org.freedesktop.ModemManager.conf  slack-desc  slack-required
MyGUI/: MyGUI.SlackBuild  MyGUI.info  slack-desc
NetworkManager/: NetworkManager.SlackBuild  doinst.sh  rc.networkmanager  slack-desc  slack-required
NetworkManager-openconnect/: NetworkManager-openconnect.SlackBuild  doinst.sh  slack-desc  slack-required
NetworkManager-openvpn/: NetworkManager-openvpn.SlackBuild  NetworkManager-openvpn.info  doinst.sh  slack-desc  slack-required
NetworkManager-pptp/: NetworkManager-pptp.SlackBuild  NetworkManager-pptp.info  doinst.sh  slack-desc
NetworkManager-vpnc/: NetworkManager-vpnc.SlackBuild  doinst.sh  slack-desc
ORBit2/: ORBit2.SlackBuild  slack-desc  slack-required
PIL/: PIL.SlackBuild  slack-desc
QtCurve-KDE4/: QtCurve-KDE4.SlackBuild  QtCurve-KDE4.info  slack-desc
R/: R.SlackBuild  R.info
SDL_image/: SDL_image.SlackBuild  SDL_image.info  slack-desc
SDL_ttf/: SDL_ttf.SlackBuild  SDL_ttf.info  slack-desc
StuntRally/: StuntRally.SlackBuild  StuntRally.info  slack-desc  slack-required
Terminal/: Terminal.SlackBuild  slack-desc  slack-required
Thunar/: Thunar.SlackBuild  slack-desc  slack-required
a52dec/: a52dec.SlackBuild  a52dec.info  slack-desc
abiword/: configuration
aegisub/: aegisub.SlackBuild  aegisub.info  slack-desc  slack-required
agg/: agg.SlackBuild  agg.info  slack-desc
aircrack-ng/: aircrack-ng.SlackBuild  aircrack-ng.info  slack-desc
alacarte/: alacarte.SlackBuild
allegro/: allegro.SlackBuild  allegro.info  slack-desc
alsa-plugins/: alsa-plugins-1.0.26-ffmpeg-1.patch  alsa-plugins.SlackBuild  alsa-plugins.info  slack-desc  slack-required
amarok/: amarok.SlackBuild  slack-required
andromeda/: andromeda.SlackBuild  slack-desc
anjuta/: anjuta.SlackBuild  doinst.sh  libanjuta-slack-desc  slack-desc
appmenu-gtk/: appmenu-gtk.SlackBuild  slack-desc
aqemu/: 01.bugfix_3155607.patch  02.fix_missing_english.ts.patch  03.remove_usb_manufacture.patch  aqemu.SlackBuild  aqemu.info  aqemu_memory_leaks.patch  install_script.sh  slack-desc  slack-required
arandr/: arandr.SlackBuild  slack-desc
aria2/: aria2.SlackBuild  aria2.info  slack-desc  slack-required
arista/: arista.SlackBuild  slack-desc
arora/: arora.SlackBuild  slack-desc
at-spi/: at-spi.SlackBuild  doinst.sh  slack-required
atk/: atk.SlackBuild
atkmm/: atkmm.SlackBuild  atkmm.info  slack-desc
audacious/: audacious.SlackBuild  slack-desc  slack-required
audacious-plugins/: audacious-plugins.SlackBuild  slack-desc  slack-required
audacity/: audacity.SlackBuild  slack-desc  slack-required
audiere/: audiere-1.9.4-Makefile.am.patch  audiere-1.9.4-configure.in.patch  audiere-1.9.4-wx-fixes.patch  audiere.SlackBuild  slack-desc
autogen/: autogen.SlackBuild  doinst.sh  slack-desc  slack-required
avahi/: avahi.SlackBuild  avahi.info  doinst.sh  slack-desc  slack-required
avidemux/: avidemux.SlackBuild  avidemux.desktop  avidemux3.desktop  slack-desc
avidemux2/: avidemux-2.5.4-dummy-sound-fix.patch  avidemux-2.5.5_fix_lav_audio_encoder.patch  avidemux.spec  avidemux2.SlackBuild  avidemux_2.5.5-ffmpeg_aac.patch  doinst.sh  slack-desc  slack-required
awn/: awn.SlackBuild  doinst.sh  slack-desc  slack-required
awn-extras/: awn-extras.SlackBuild  doinst.sh  slack-desc  slack-required
banshee-1/: banshee-1.SlackBuild  doinst.sh  slack-desc  slack-required
beautifulsoup4/: beautifulsoup4.SlackBuild  beautifulsoup4.info  slack-desc
bleachbit/: bleachbit.SlackBuild  slack-desc
bogofilter/: bogofilter.SlackBuild  bogofilter.info  slack-desc  slack-required
bombono-dvd/: bombono-dvd.SlackBuild  bombono.info  slack-desc  slack-required
bomi/: bomi.SlackBuild  bomi.info  slack-desc
boo/: boo.SlackBuild  (+2 more)
gecko-mediaplayer/a/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  config.h  config.h.in  configure.in  gecko-mediaplayer.schemas  gecko-mediaplayer.spec  gecko-mediaplayer.spec.in
gecko-mediaplayer/a/DOCS/tech/: javascript.txt
gecko-mediaplayer/a/po/: cs.po  de.po  es.gmo  es.po  fr.gmo  fr.po  gecko-mediaplayer.pot  it.gmo  nl.po  pl.gmo  pl.po  tr.gmo  tr.po
gecko-mediaplayer/a/src/: memmem_compat.cpp  npupp.h  plugin.cpp  plugin_dbus.cpp  plugin_dbus.h  plugin_list.h  plugin_setup.cpp  plugin_setup.h
gecko-mediaplayer/a/src/libgmlib/: Makefile.am  gm_audio.c  gm_audio.h  gm_file.h  gm_parse.c  gm_pref_store.h  gm_strfuncs.c  gm_strfuncs.h  gmlib.h
gecko-mediaplayer/b/src/: Makefile.am  Makefile.in  memmem_compat.cpp  memmem_compat.h  np_entry.cpp  npn_gate.cpp  npp_gate.cpp  plugin.cpp  plugin.h  plugin_list.cpp  plugin_types_dvx.cpp  plugin_types_qt.cpp  plugin_types_rm.cpp  plugin_types_std.cpp  plugin_types_wmp.cpp
gecko-mediaplayer/b/src/libgmlib/: Makefile.in  gm_file.c  gm_parse.h  gm_pref_store.c
wavegain/: CMakeLists.txt  slack-desc  wavegain.SlackBuild
(+4404 files in other folders)
